# vegapunk-web

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  기획서.md
.github/workflows/: ci.yml
app/: chunking.py  config.py  db.py  deps.py  distill_match.py  embedding.py  indexing.py  ingest.py  llm.py  llm_text.py  main.py  mcp_server.py  mcp_tools.py  memory.py  oauth_store.py  search.py  session.py  settings.py  wikilink.py
app/routes/: account.py  auth.py  chat.py  distill.py  health.py  memo.py  notes.py  oauth.py
docs/: deploy.md
infra/postgres-bigm/: Dockerfile
migrations/: 0001_init.sql  0002_multiuser.sql  0003_memos.sql  0004_drop_note_versions.sql  0005_identities.sql
static/: app.js  index.html  login.html  style.css
tasks/: 01-project-setup-and-schema.md  02-embedding-service.md  03-indexing-pipeline.md  04-hybrid-search.md  05-llm-client.md  06-conversation-memory.md  07-chat-pipeline.md  08-distill.md  09-notes-api.md  10-auth.md  11-frontend-spa.md  12-deployment.md  README.md
tasks/v2/: 01-account-model.md  02-oauth-authorization-server.md  03-mcp-server-and-tools.md  04-deploy-and-connect.md  08-admin-console.md  (+4 more)
tests/: _helpers.py  conftest.py  test_account.py  test_auth.py  test_chat.py  test_chunking.py  test_distill.py  test_distill_match.py  test_embedding.py  test_health.py  test_indexing.py  test_llm.py  test_llm_text.py  test_mcp_tools.py  test_memo.py  test_memory.py  test_migrations.py  test_notes.py  test_oauth_as.py  test_schema.py  test_search.py  test_static.py  test_wikilink.py
