[project]
name = "vegapunk"
version = "0.1.0"
description = "개인 지식베이스 기반 AI 대화 비서 (제2의 뇌)"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.5",
    "sse-starlette>=2.0",
    "pydantic-settings>=2.2",
    "fastembed>=0.3",
    "redis>=5.0",
    "authlib>=1.3",
    "itsdangerous>=2.1",
    "mcp>=1.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["app", "app.routes"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
